=== 2016-08-04
* Enhancements
  * Added ability to find TextField by :title
  * Added ability to find Image by :alt
  * Added ability to find Form by :action
  * Added ability to find Image by :src
=== 2016-08-03
* Enhancements
  * Added ability to find image buttons by src
  * Added ability to find image buttons by alt
  * Added first_row and last_row methods to table
  * Added new module PagePopulator with single method populate_page_with
  * Added deprecation warning to the method_missing method on Element.
  * Added all of the file_field locators
  * Added full support for file_field element
=== 2016-08-02
* Enhancements
  * Added all of the h5 locators
  * Added all of the h6 locators
  * Added all of the paragraph locators
  * Added the Paragraph class
  * Added #current_url to Druid
  * Added #style to Element
  * Added #inspect to Element
  * Added #clear_cookies to Druid
  * Added #save_screenshot to Druid
  * Changed PageFactory so it also sets and instance variable @current_page to the newly created page
  * now can find radio buttons by value
  * Added instance level in_frame, in_iframe method
  * Support for nesting all *_element instance methods inside in_frame call
  * Support for nesting alerts inside an in_frame call
  * Support for nesting confirms inside an in_frame call
  * Support for nesting prompts inside an in_frame call
=== 2016-08-01
* Enhancements
  * Added #clear method for TextArea
  * Element#when_present now returns the element object
  * Element#when_visible now returns the element object
  * Element#when_not_visible now returns the element object
  * Added all of the h2 locators
  * Added all of the h3 locators
  * Added all of the h4 locators
=== 2016-07-31
* Enhancements
  * Added support for Heading element
  * Added all of the h1 locators
=== 2016-07-29
* Enhancements
  * Support for locating the following elements when nested
    * Link
    * Button
    * TextField
    * HiddenField
    * TextArea
    * SelectList